[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemies/enemy_eldritch_blast_orb.png" type="Texture" id=1]
[ext_resource path="res://assets/particles/poison_smoke_particle.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemies/EnemyEldritchBlast.gd" type="Script" id=3]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.289877 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 150, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_curve = SubResource( 4 )

[sub_resource type="CircleShape2D" id=2]
radius = 19.105

[node name="EnemyEldritchBlast" type="KinematicBody2D"]
position = Vector2( 272, 110 )
collision_layer = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -18, 0 )
rotation = 1.5708
amount = 4
lifetime = 1.25
preprocess = 3.0
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
